--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h3>Cadastro de Clientes:</h3>
     </header>
 
-    <div class="container shadow rounded mt-5">
+    <div class="container shadow rounded mt-5 pb-5">
         <main>
             <section>
                 <div class="row px-5">
                     <form>
-                        <div class="col-12 mt-4">
+                        <div class="col-12 mt-5">
                             <div class="row mt-3">
                                 <div class="col-6">
                                     <label for="inputNome" class="form-label">Nome:</label>
@@ -67,8 +67,28 @@
                 </div>
             </section>
 
+            <br> <br>
+
             <section>
-                
+                <div class="row px-5">
+                    <div class="col-md-12">
+                        <table class="table" id="clientsTable">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Nome Completo</th>
+                                    <th scope="col">Endereço</th>
+                                    <th scope="col">CEP</th>
+                                    <th scope="col">Bairro</th>
+                                    <th scope="col">Cidade</th>
+                                    <th scope="col">Estado</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
