--- a/index.html
+++ b/index.html
@@ -20,43 +20,43 @@
                             <div class="row mt-3">
                                 <div class="col-6">
                                     <label for="inputNome" class="form-label">Nome:</label>
-                                    <input type="text" class="form-control" id="inputNome">
+                                    <input type="text" class="form-control" id="inputNome" required>
                                 </div>
                                 <div class="col-6">
                                     <label for="inputLastName" class="form-label">Sobrenome:</label>
-                                    <input type="text" class="form-control" id="inputLastName">
+                                    <input type="text" class="form-control" id="inputLastName" required>
                                 </div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-3">
                                     <label for="inputCEP" class="form-label">Pesquise pelo CEP:</label>
-                                    <input type="text" class="form-control" id="inputCEP">
+                                    <input type="text" class="form-control" id="inputCEP" onblur="search();" required>
                                 </div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-10">
                                     <label for="inputAdress" class="form-label">Endereço:</label>
-                                    <input type="text" class="form-control" id="inputAdress" disabled>
+                                    <input type="text" class="form-control" id="inputAdress" disabled required>
                                 </div>
                                 <div class="col-2">
                                     <label for="inputNumber" class="form-label">Número:</label>
-                                    <input type="number" class="form-control" id="inputNumber" disabled>
+                                    <input type="text" class="form-control" id="inputNumber" disabled required>
                                 </div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-6">
                                     <label for="inputNeighborhood" class="form-label">Bairro:</label>
-                                    <input type="text" class="form-control" id="inputNeighborhood" disabled>
+                                    <input type="text" class="form-control" id="inputNeighborhood" disabled required>
                                 </div>
                                 <div class="col-6">
                                     <label for="inputCity" class="form-label">Cidade:</label>
-                                    <input type="text" class="form-control" id="inputCity" disabled>
+                                    <input type="text" class="form-control" id="inputCity" disabled required>
                                 </div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-2">
                                     <label for="inputState" class="form-label">Estado:</label>
-                                    <input type="text" class="form-control" id="inputState" disabled>
+                                    <input type="text" class="form-control" id="inputState" disabled required>
                                 </div>
                             </div>
                         </div>
@@ -94,5 +94,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-mask-plugin@1.14.16/dist/jquery.mask.min.js"></script>
+    <script src="js/script.js"></script>
+</body>
 </html>
