--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <main>
             <section>
                 <div class="row px-5">
-                    <form>
+                    <form onsubmit="save(); return false;" id="formClient">
                         <div class="col-12 mt-5">
                             <div class="row mt-3">
                                 <div class="col-6">
-                                    <label for="inputNome" class="form-label">Nome:</label>
-                                    <input type="text" class="form-control" id="inputNome" required>
+                                    <label for="inputName" class="form-label">Nome:</label>
+                                    <input type="text" class="form-control" id="inputName" required>
                                 </div>
                                 <div class="col-6">
                                     <label for="inputLastName" class="form-label">Sobrenome:</label>
