closes #6 - Error Handling

--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-3">
+                                <div class="col-5">
                                     <label for="inputCEP" class="form-label">Pesquise pelo CEP:</label>
-                                    <input type="text" class="form-control" id="inputCEP" onblur="search();" required>
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <input type="text" class="form-control" id="inputCEP" onblur="search();" required>
+                                        </div>
+                                        <!-- Mensagens -->
+                                        <div class="col-4" id="msg">
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="row mt-3">
