--- a/index.html
+++ b/index.html
@@ -18,51 +18,51 @@
                     <form onsubmit="save(); return false;" id="formClient">
                         <div class="col-12 mt-5">
                             <div class="row mt-3">
-                                <div class="col-6">
+                                <div class="col-md-6">
                                     <label for="inputName" class="form-label">Nome:</label>
                                     <input type="text" class="form-control" id="inputName" required>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-md-6">
                                     <label for="inputLastName" class="form-label">Sobrenome:</label>
                                     <input type="text" class="form-control" id="inputLastName" required>
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-5">
+                                <div class="col-md-5">
                                     <label for="inputCEP" class="form-label">Pesquise pelo CEP:</label>
                                     <div class="row">
-                                        <div class="col-8">
+                                        <div class="col-md-8">
                                             <input type="text" class="form-control" id="inputCEP" onblur="search();" required>
                                         </div>
                                         <!-- Mensagens -->
-                                        <div class="col-4" id="msg">
+                                        <div class="col-md-4" id="msg">
                                         </div>
                                     </div>
 
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-10">
+                                <div class="col-sm-10">
                                     <label for="inputAdress" class="form-label">Endereço:</label>
                                     <input type="text" class="form-control" id="inputAdress" disabled required>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-5 col-sm-2">
                                     <label for="inputNumber" class="form-label">Número:</label>
                                     <input type="text" class="form-control" id="inputNumber" disabled required>
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-6">
+                                <div class="col-sm-6">
                                     <label for="inputNeighborhood" class="form-label">Bairro:</label>
                                     <input type="text" class="form-control" id="inputNeighborhood" disabled required>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-sm-6">
                                     <label for="inputCity" class="form-label">Cidade:</label>
                                     <input type="text" class="form-control" id="inputCity" disabled required>
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-2">
+                                <div class="col-md-2">
                                     <label for="inputState" class="form-label">Estado:</label>
                                     <input type="text" class="form-control" id="inputState" disabled required>
                                 </div>
@@ -87,9 +87,9 @@
                                     <th scope="col">Nome Completo</th>
                                     <th scope="col">Endereço</th>
                                     <th scope="col">CEP</th>
-                                    <th scope="col">Bairro</th>
-                                    <th scope="col">Cidade</th>
-                                    <th scope="col">Estado</th>
+                                    <th scope="col" class="d-none d-md-table-cell">Bairro</th>
+                                    <th scope="col" class="d-none d-sm-table-cell">Cidade</th>
+                                    <th scope="col" class="d-none d-sm-table-cell">Estado</th>
                                 </tr>
                             </thead>
                             <tbody>
